remove unwanted classes

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
           </div>
         </form>
         <button type="submit" class="btn" id="frmSubmit" id="test">
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-        Search
+        <span  aria-hidden="true"></span>
+        Submit
         </button>  
         </div>
       </div>
