fixed frequency display

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         newsDiv = $("<tr class='item'>");
         newsDiv.append("<td>" + childSnapshot.val().name + "</td>");
         newsDiv.append("<td>" + childSnapshot.val().email + "</td>");
-        newsDiv.append("<td>" + childSnapshot.val().joinDate + "</td>");
+        newsDiv.append("<td>" + childSnapshot.val().comment + "</td>");
         newsDiv.append("<td>" + childSnapshot.val().name + "</td>");
         newsDiv.append("<td>" + childSnapshot.val().email + "</td>");
         $(".table tbody").prepend(newsDiv);
