Change css background

--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
 
 <body>
 
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <script src="https://use.fontawesome.com/7b6dd2ca46.js"></script>
  
 <div class="container">
     <div class="jumbotron">
    <h1>Anytime is Train Time</h1> 
-   <h4>Choo Choo. Chee Chee.</h4></div>
+  </div>
 
 <div class="container" id="rContainer">
    <div class="row">
       <div class="panel panel-default">
         <div class="panel-heading" id="searchpar">
+        <span class="fa fa-clock-o" style="font-size:24px;"></span>
           Current Train Schedule
         </div>
         <div class="panel-body">
@@ -58,6 +62,7 @@
    <div class="row">
       <div class="panel panel-default">
         <div class="panel-heading" id="searchpar">
+        <span class="fa fa-train" style="font-size:24px;"></span>
           Add Train
         </div>
         <div class="panel-body">
@@ -105,6 +110,11 @@
   </div>
 </div>
 
+<footer class="footer">
+      <div class="container">
+        <p class="text-muted">Train Scheduler</p>
+      </div>
+    </footer>
 
   
   <!-- Displaying the results -->
